:recycle: fix spacing issues, improve site css, update main summary

--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -4,21 +4,18 @@
 
 @include media-breakpoint-down(sm) {
 
-  .Header {
-    height: 3em;
-  }
-
   .header-left {
     margin-left: 5%;
-    width: 35%;
 
     .back-home {
       font-size: 0.6em;
       z-index: 10;
       position: relative;
+      display: flex;
+      align-items: center;
 
       .back-home-arrow {
-        margin-right: 0.57em;
+        margin: 0 1em;
       }
     }
   }
@@ -46,10 +43,6 @@
 }
 
 @include media-breakpoint-up(md) {
-
-  .Header {
-    height: 5em;
-  }
 
   .header-left {
     margin-left: 10%;
@@ -87,11 +80,15 @@
 }
 
 .Header {
-  position: absolute;
+  position: sticky;
   top: 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: #36373a4D;
+  backdrop-filter: blur(16px);
+  z-index: 10;
 }
 
 .initials-square {
