--- a/src/ProjectPage/ProjectPage.scss
+++ b/src/ProjectPage/ProjectPage.scss
@@ -59,6 +59,7 @@
 
       .skill {
         font-size: 12px;
+        line-height: 2;
       }
     }
   }
